--- a/src/features/header/Header.css
+++ b/src/features/header/Header.css
@@ -7,12 +7,12 @@ header {
     background-color: aliceblue;
     padding-bottom: 1rem;
 }
-.nav a {
+nav a {
     text-decoration: none;
     color: black;
 }
 
-.nav {
+nav {
     width: 100%;
     display: flex;
     justify-content: space-around;
